--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -107,7 +107,7 @@
 }
 
 /*
-! tailwindcss v3.4.16 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.17 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -576,6 +576,10 @@ video {
   display: block;
 }
 
+.inline-block {
+  display: inline-block;
+}
+
 .flex {
   display: flex;
 }
@@ -588,16 +592,8 @@ video {
   display: contents;
 }
 
-.h-full {
-  height: 100%;
-}
-
 .h-0\.5 {
   height: 0.125rem;
-}
-
-.h-96 {
-  height: 24rem;
 }
 
 .max-h-8 {
@@ -608,24 +604,20 @@ video {
   max-height: 24rem;
 }
 
-.max-h-12 {
-  max-height: 3rem;
-}
-
-.max-h-1 {
-  max-height: 0.25rem;
-}
-
 .w-full {
   width: 100%;
 }
 
-.w-8\/12 {
-  width: 66.666667%;
+.w-1\/2 {
+  width: 50%;
 }
 
-.w-screen {
-  width: 100vw;
+.w-7\/12 {
+  width: 58.333333%;
+}
+
+.w-96 {
+  width: 24rem;
 }
 
 .min-w-max {
@@ -637,8 +629,20 @@ video {
   max-width: 2rem;
 }
 
+.max-w-96 {
+  max-width: 24rem;
+}
+
+.max-w-80 {
+  max-width: 20rem;
+}
+
 .table-auto {
   table-layout: auto;
+}
+
+.table-fixed {
+  table-layout: fixed;
 }
 
 .border-collapse {
@@ -661,13 +665,14 @@ video {
   align-items: center;
 }
 
+.gap-x-1 {
+  -moz-column-gap: 0.25rem;
+       column-gap: 0.25rem;
+}
+
 .gap-x-3 {
   -moz-column-gap: 0.75rem;
        column-gap: 0.75rem;
-}
-
-.overflow-y-auto {
-  overflow-y: auto;
 }
 
 .overflow-y-scroll {
@@ -711,61 +716,34 @@ video {
   border-color: rgb(250 250 250 / 0.1);
 }
 
-.bg-neutral-700 {
+.bg-lime-800 {
   --tw-bg-opacity: 1;
-  background-color: rgb(64 64 64 / var(--tw-bg-opacity, 1));
-}
-
-.bg-neutral-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 245 / var(--tw-bg-opacity, 1));
-}
-
-.bg-neutral-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(23 23 23 / var(--tw-bg-opacity, 1));
-}
-
-.bg-neutral-900\/60 {
-  background-color: rgb(23 23 23 / 0.6);
-}
-
-.bg-neutral-100\/60 {
-  background-color: rgb(245 245 245 / 0.6);
-}
-
-.bg-neutral-100\/10 {
-  background-color: rgb(245 245 245 / 0.1);
+  background-color: rgb(63 98 18 / var(--tw-bg-opacity, 1));
 }
 
 .bg-neutral-100\/30 {
   background-color: rgb(245 245 245 / 0.3);
 }
 
-.bg-green-300\/30 {
-  background-color: rgb(134 239 172 / 0.3);
-}
-
-.bg-green-700\/30 {
-  background-color: rgb(21 128 61 / 0.3);
-}
-
-.bg-lime-600 {
+.bg-neutral-700 {
   --tw-bg-opacity: 1;
-  background-color: rgb(101 163 13 / var(--tw-bg-opacity, 1));
-}
-
-.bg-lime-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(63 98 18 / var(--tw-bg-opacity, 1));
+  background-color: rgb(64 64 64 / var(--tw-bg-opacity, 1));
 }
 
 .bg-clip-border {
   background-clip: border-box;
 }
 
+.p-1 {
+  padding: 0.25rem;
+}
+
 .p-10 {
   padding: 2.5rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .p-3 {
@@ -776,27 +754,19 @@ video {
   padding: 1rem;
 }
 
-.p-1 {
-  padding: 0.25rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .text-left {
@@ -811,13 +781,14 @@ video {
   font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-.font-serif {
-  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-sm {
@@ -845,9 +816,9 @@ video {
   line-height: 1.5;
 }
 
-.text-gray-700 {
+.text-lime-400 {
   --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
+  color: rgb(163 230 53 / var(--tw-text-opacity, 1));
 }
 
 .text-red-700 {
@@ -855,18 +826,13 @@ video {
   color: rgb(185 28 28 / var(--tw-text-opacity, 1));
 }
 
+.text-slate-300\/30 {
+  color: rgb(203 213 225 / 0.3);
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-lime-400 {
-  --tw-text-opacity: 1;
-  color: rgb(163 230 53 / var(--tw-text-opacity, 1));
-}
-
-.text-slate-300\/30 {
-  color: rgb(203 213 225 / 0.3);
 }
 
 .antialiased {
@@ -878,28 +844,12 @@ video {
   opacity: 0.7;
 }
 
-.hover\:bg-neutral-800\/75:hover {
-  background-color: rgb(38 38 38 / 0.75);
-}
-
-.hover\:bg-green-300\/75:hover {
-  background-color: rgb(134 239 172 / 0.75);
-}
-
-.hover\:bg-green-100\/75:hover {
-  background-color: rgb(220 252 231 / 0.75);
-}
-
-.hover\:bg-green-700\/75:hover {
-  background-color: rgb(21 128 61 / 0.75);
-}
-
-.hover\:bg-lime-600\/30:hover {
-  background-color: rgb(101 163 13 / 0.3);
-}
-
 .hover\:bg-lime-600\/75:hover {
   background-color: rgb(101 163 13 / 0.75);
+}
+
+.hover\:bg-neutral-800\/75:hover {
+  background-color: rgb(38 38 38 / 0.75);
 }
 
 .hover\:font-bold:hover {
@@ -909,16 +859,4 @@ video {
 .hover\:text-sky-500:hover {
   --tw-text-opacity: 1;
   color: rgb(14 165 233 / var(--tw-text-opacity, 1));
-}
-
-.hover\:underline:hover {
-  text-decoration-line: underline;
-}
-
-.hover\:opacity-75:hover {
-  opacity: 0.75;
-}
-
-.\[\&\:not\(\:last-child\)\]\:border-b:not(:last-child) {
-  border-bottom-width: 1px;
 }
