--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -612,10 +612,6 @@ video {
   width: 100%;
 }
 
-.w-screen {
-  width: 100vw;
-}
-
 .min-w-max {
   min-width: -moz-max-content;
   min-width: max-content;
@@ -663,6 +659,12 @@ video {
   overflow-y: scroll;
 }
 
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .whitespace-pre-wrap {
   white-space: pre-wrap;
 }
@@ -691,10 +693,6 @@ video {
   border-top-width: 0px;
 }
 
-.border-dashed {
-  border-style: dashed;
-}
-
 .border-double {
   border-style: double;
 }
@@ -708,23 +706,13 @@ video {
   border-color: rgb(185 28 28 / var(--tw-border-opacity, 1));
 }
 
-.border-zinc-50\/10 {
-  border-color: rgb(250 250 250 / 0.1);
-}
-
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
-}
-
 .border-teal-200 {
   --tw-border-opacity: 1;
   border-color: rgb(153 246 228 / var(--tw-border-opacity, 1));
 }
 
-.bg-lime-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(63 98 18 / var(--tw-bg-opacity, 1));
+.border-zinc-50\/10 {
+  border-color: rgb(250 250 250 / 0.1);
 }
 
 .bg-neutral-100\/30 {
@@ -763,11 +751,6 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .py-4 {
@@ -822,11 +805,6 @@ video {
   line-height: 1.5;
 }
 
-.text-lime-400 {
-  --tw-text-opacity: 1;
-  color: rgb(163 230 53 / var(--tw-text-opacity, 1));
-}
-
 .text-red-700 {
   --tw-text-opacity: 1;
   color: rgb(185 28 28 / var(--tw-text-opacity, 1));
@@ -848,10 +826,6 @@ video {
 
 .opacity-70 {
   opacity: 0.7;
-}
-
-.hover\:bg-lime-600\/75:hover {
-  background-color: rgb(101 163 13 / 0.75);
 }
 
 .hover\:bg-neutral-800\/75:hover {
